src/test/ui/unused/unused-no_prelude.stderr
error: unused attribute
  --> $DIR/unused-no_prelude.rs:8:5
   |
LL |     #![no_prelude]
   |     ^^^^^^^^^^^^^^
   |
note: the lint level is defined here
  --> $DIR/unused-no_prelude.rs:3:9
   |
LL | #![deny(unused_attributes)]
   |         ^^^^^^^^^^^^^^^^^

error: unused attribute
  --> $DIR/unused-no_prelude.rs:4:1
   |
LL | #![no_prelude]
   | ^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

